# penugasan4-kelompok-5-B

./: list_files.py  package-lock.json  package.json
backend/: docker-compose.yaml  pyproject.toml
backend/app/: database.py  main.py  models.py
backend/app/routers/: auth.py  events.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/events/: page.tsx  schema.ts
frontend/app/login/: page.jsx
frontend/app/register/: page.jsx  page.tsx
frontend/components/ui/: form.tsx
